# zerophix

./: .env.example  .gitignore  .pypirc.template  AUSTRALIAN_COVERAGE.md  CONTRIBUTING.md  DATABRICKS_BENCHMARK_UPDATE.md  DEBUGGING_ENTITY_DETECTION.md  FIX_SUMMARY_v0.1.17.md  MANIFEST.in  QUICK_REFERENCE.md  README.md  REDACTION_LOGIC.md  SCANNING_FEATURES.md  SECURITY_COMPLIANCE.md  USAGE_GUIDE.md  debug_import.py  find_valid_tfn.py  generate_test_numbers.py  pyproject.toml  pytest.ini  requirements.txt  run_json_examples.py  run_zerophi.py  smoke_test.py  stress_test.py  test_au_detector.py  test_au_integration.py  test_installed_library.py  test_pypi_release.py  test_redaction_output.py  test_simple_debug.py  test_valid_tfns.py  verify_installation.py  verify_test_numbers.py
.github/: CODEOWNERS
.github/workflows/: publish-to-pypi.yml
configs/: api_config.yml  offline.au.yaml  security_compliance.yml  tiers.yaml
configs/company/: acme.yml  pii.regex.yaml  psi.regex.yaml
data/: complex.docs.sample.jsonl  docs.sample.jsonl
docs/: API_DEPLOYMENT.md
eval/: pdf_deid_benchmark.py  run_all_evaluations.py  tab_benchmark.py
eval/results/: tab_debug.txt
examples/: CLI_EXAMPLES.md  ULTRA_COMPLEX_README.md  adaptive_ensemble_examples.py  all_interfaces_demo.py  api_usage_examples.py  australian_entities_examples.py  complex_1.json  complex_2.json  complex_3.json  complex_4.json  complex_5.json  comprehensive_usage_examples.py  databricks_medical_optimized.py  detection_methods_example.py  file_tests_pii.py  gliner_examples.py  minimal_example.py  optimized_databricks_benchmark.ipynb  performance_comparison_demo.py  pii.csv  pii.xlsx  pii_scanning_report_example.py  quick_calibrate.py  quick_start_examples.py  quickstart.py  redaction_strategies_examples.py  report_example.py  run_api.py  samples.txt  scan_example.py  simple_redaction_example.py  test_all_interfaces.py  ultra_complex_examples.py
keys/: 133d91600192b1a1.key  2e61bd31293c04d8.key  5602520eeeb87085.key  b4f8966fbd177255.key  ca34bb1cef00a79a.key  cdca71e28bafe5a4.key  master.key
outputs/: audit.jsonl  deid.audit.jsonl  deid.output.jsonl
sample_documents/: sample.txt  sample_data.xlsx
scripts/: bench_against_azure.py  bootstrap_models.py  download_benchmarks.py  finetune_model.py  get_tier.py  inspect_benchmarks.py  run_json_examples.py  verify_models.py
src/eval/results/: evaluation_2025-12-27T03-13-41Z.json  evaluation_2025-12-27T03-16-23Z.json  evaluation_2025-12-27T03-17-35Z.json  evaluation_2025-12-27T06-14-12Z.json  evaluation_2025-12-28T01-46-48Z.json  evaluation_2025-12-28T03-06-25Z.json  evaluation_2025-12-28T03-11-50Z.json  evaluation_2025-12-28T03-15-22Z.json  evaluation_2025-12-28T04-11-14Z.json  evaluation_2025-12-28T05-06-35Z.json  evaluation_2026-01-02T02-04-28Z.json  evaluation_2026-01-12T06-25-39Z.json
src/zerophi/: __init__.py  cli.py  config.py  config_loader.py  engine.py  pipeline.py  policy.py  types.py
src/zerophi/api/: __init__.py  rest.py
src/zerophi/detectors/: bert_detector.py  custom_detector.py  gliner_detector.py  openmed.py  openmed_detector.py  openmed_local.py  phi_regex.py  regex_custom.py  regex_detector.py  spacy_detector.py
src/zerophi/evaluators/: bench_azure.py
src/zerophi/models/: manager.py
src/zerophi/performance/: __init__.py  optimization.py
src/zerophi/pipelines/: redaction.py
src/zerophi/policies/: au.yml  ca.yml  loader.py  uk.yml
src/zerophi/processors/: __init__.py
src/zerophi/redaction/: __init__.py
src/zerophi/resolvers/: overlap.py
src/zerophi/security/: __init__.py  compliance.py  encryption.py
src/zerophix/: __init__.py  __version__.py  cli.py  config.py
tests/: README.md  regression_baseline.json  regression_suite.py  test_accuracy_features.py  test_adaptive_ensemble.py  test_api_config.py  test_au_detector.py  test_au_integration.py  test_au_manual.py  test_au_validators.py  test_basic.py  test_eval_snapshot.py  test_redaction_pipeline.py  test_results.txt  test_valid_tfns.py
(+51 files in other folders)
