[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
[project]
name = "zerophi"
version = "0.4.0"
description = "Zero-PHI/PII/PSI redaction + clinical retargeting (offline/online modes)"
authors = [ { name = "ZeroPHI" } ]
license = { text = "Apache-2.0" }
requires-python = ">=3.9"
dependencies = ["pydantic>=2.6","fastapi>=0.110","uvicorn>=0.30","regex>=2023.12.25","pyyaml>=6.0.1"]
[project.optional-dependencies]
nlp = ["spacy>=3.7"]
hf = ["transformers>=4.41", "torch>=2.2"]
dev = ["pytest", "httpx", "ruff"]
[tool.setuptools.package-dir]
"" = "src"
