[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "zerophi"
version = "0.1.0"
description = "Zero-PII/PHI redaction for AU (and beyond): composable regex + NER with optional OpenMed models"
authors = [{name = "Your Name"}]
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.7",
    "pyyaml>=6.0.1",
    "regex>=2024.4.16",
    "click>=8.1.7",
    "tqdm>=4.66.5",
    "rich>=13.9.2",
]

[project.urls]
Homepage = "https://github.com/yourorg/zerophi"
Issues = "https://github.com/yourorg/zerophi/issues"

[project.scripts]
zerophi = "zerophi.cli:app"

[project.optional-dependencies]
openmed = ["transformers>=4.44.0", "torch>=2.3.0"]
azurebench = ["requests>=2.32.3"]
dev = ["pytest>=8.3.3", "pytest-cov>=5.0.0", "ruff>=0.6.7", "mypy>=1.11.2"]

[tool.setuptools.packages.find]
where = ["src"]
